[project]
name = "realpython-reader-tony"
version = "1.1.4"
description = "Read the latest Real Python tutorials"
authors = [
    {name = "Tony Klein",email = "github@tony-klein.de"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "feedparser (>=6.0.11,<7.0.0)",
    "html2text (>=2024.2.26,<2025.0.0)",
]

keywords = ["feed", "reader", "tutorial"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
bumpver = "^2024.1130"
isort = "^6.0.1"
mypy = "^1.15.0"
pytest = "^8.3.4"
python-dotenv = "^1.0.1"

[tool.pytest.ini_options]
env_files = [".env"]

[tool.bumpver]
current_version = "1.1.4"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

    [tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"',
        'version = "{version}"',
    ]
    "src/reader/__init__.py" = ["{version}"]
    "src/reader/__main__.py" = ["- realpython-reader v{version}"]

[tool.isort]
profile                   = "black"
import_heading_stdlib     = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Reader imports"

[tool.mypy]
strict = true

    [[tool.mypy.overrides]]
    module                 = "feedparser"
    ignore_missing_imports = true